--- a/app/views/breweries/index.html.erb
+++ b/app/views/breweries/index.html.erb
@@ -22,6 +22,6 @@
   </tbody>
 </table>
 
-<br>
+<p><%= link_to 'New Brewery', new_brewery_path %><p>
 
-<%= link_to 'New Brewery', new_brewery_path %>
+<p><%= link_to 'List of beers', beers_path %></p>
