--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -1,3 +1,9 @@
-<h2>List of ratings</h2>
+<h1>List of ratings</h1>
 
-<p>To be completed...</p>
+<p>Number of ratings <%= @ratings.count %></p>
+
+<ul>
+<% @ratings.each do |rating| %>
+  <li><%= rating %></li>
+<% end %>
+</ul>
