--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -15,6 +15,15 @@
   <%= @beer.brewery_id %>
 </p>
 
+
+<p>
+<% if @beer.ratings.empty? %>
+beer has not yet been rated!
+<% else %>
+beer has <%= @beer.ratings.count %> ratings, average <%= @beer.average_rating %>
+<% end %>
+</p>
+
 <p>
 <%= link_to 'Edit', edit_beer_path(@beer) %> |
 <%= link_to 'Back', beers_path %>
