--- a/app/views/ratings/index.html.erb
+++ b/app/views/ratings/index.html.erb
@@ -4,8 +4,8 @@
 
 <ul>
 <% @ratings.each do |rating| %>
-  <li><%= rating %></li>
+  <li><%= rating %> <%= link_to 'delete', rating, :method => :delete, data: { confirm: 'Are you sure?' }%></li>
 <% end %>
 </ul>
 
-<p><%= link_to 'New Rating', new_rating__path %><p>
+<p><%= link_to 'New Rating', new_rating_path %><p>
