--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -18,9 +18,9 @@
 
 <p>
 <% if @beer.ratings.empty? %>
-beer has not yet been rated!
+No ratings
 <% else %>
-beer has <%= pluralize @beer.ratings.count, 'rating' %>, average <%= @beer.average_rating %>
+Has <%= pluralize @beer.ratings.count, 'rating' %>, average <%= @beer.average_rating %>
 <% end %>
 </p>
 
