--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -13,6 +13,14 @@
 </p>
 
 <p>
+<% if @brewery.ratings.empty? %>
+No ratings
+<% else %>
+Has <%= pluralize @brewery.ratings.count, 'rating' %>, average <%= @brewery.average_rating %>
+<% end %>
+</p>
+
+<p>
 <%= link_to 'Edit', edit_brewery_path(@brewery) %> |
 <%= link_to 'Back', breweries_path %>
 </p>
